add ship to cell drag drop